# securin-xbom

./: .gitignore  README.md  pyproject.toml  requirements.txt
sample/: README.md  docker-compose.yaml  mcp.json  requirements.txt
sample/app/: admin.py  agent.py  auth.py  chat.py  config.yaml  embeddings.py  external.py  guardrails.py  main.py  models.py  observability.py  rag_pipeline.py
sample/docs/: openapi.yaml
sample/reports/: README.md  ai-bom.cdx.json  api-bom.cdx.json  cbom.cdx.json  xbom-composite.cdx.json
src/xbom/: __init__.py  cli.py  config.py  merger.py  models.py  runner.py
src/xbom/modules/: base.py
src/xbom/modules/aibom/: agent.py  agent_config.yaml  catalog.py  codegraph.py  codegraph_prompts.yaml  ecosystems_client.py  patterns.py  risk.py  scanner.py
src/xbom/modules/aibom/rules/: api_keys.yaml  catalog.yaml  cloud.yaml  docker.yaml  endpoints.yaml  files.yaml  github_actions.yaml  imports.yaml  models.yaml  risk.yaml
src/xbom/modules/apibom/: __init__.py  client_detector.py  risk.py  scanner.py  spec_parser.py
src/xbom/modules/apibom/extractors/: base.py  javascript.py  python.py
src/xbom/modules/apibom/rules/: clients.yaml  frameworks.yaml  openapi.yaml  risk.yaml
src/xbom/modules/cbom/: __init__.py  cdxgen_crypto.py  pqc_annotator.py  risk.py  scanner.py  semgrep.py  tls_scanner.py
src/xbom/modules/sbom/: cdxgen.py  scanner.py  trivy.py
src/xbom/source/: provider.py
src/xbom/utils/: cyclonedx.py  subprocess.py
tests/: test_aibom.py  test_apibom.py  test_cli.py  test_cyclonedx_utils.py  test_merger.py  test_models.py
tests/fixtures/external_calls/: client.py
tests/fixtures/js_express/: app.js
tests/fixtures/openapi_spec/: openapi.yaml
tests/fixtures/python_fastapi/: main.py  requirements.txt
tests/fixtures/python_flask/: app.py
(+15 files in other folders)
